syntax = "proto3";
package grpc;

import "im.proto";

service LogicService {

	rpc Check (CheckReq) returns (CheckReply) {
	}

	rpc Receive (ReceiveReq) returns (ReceiveReply) {
	}

}

message ReceiveReq {
	Proto proto = 1;
}

message ReceiveReply {
}


message CheckReq {
	int32 id = 1;
}

message CheckReply {
	int32 key = 1;
}


